refactor(server): migrate from Spring Boot to lightweight Javalin server
- Replace Spring Boot WebFlux with Javalin for simpler HTTP/WebSocket handling
- Remove Spring dependencies (Security, WebFlux, Validation) and configuration
- Extract shared DTOs (WsMessage, MessageHandler) to separate module
- Implement custom WebSocket handler for server-manager communication
- Simplify configuration loading from environment variables
- Replace reactive streams with CompletableFuture for async operations
- Remove Docker service and manager controller as they're no longer needed
- Update build dependencies to remove Spring and add WebSocket client
- Add comprehensive server documentation (SERVER.md) for architecture reference