@@ -1,19 +1,17 @@
 package server.service;
 
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.EnumSet;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.Executors;
+import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.http.codec.multipart.FilePart;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Service;
 import arc.files.Fi;
 import arc.util.Log;
 import dto.MapDto;
@@ -26,438 +24,324 @@ import events.BaseEvent;
 import events.ServerEvents;
 import events.ServerEvents.LogEvent;
 import enums.NodeRemoveReason;
-import jakarta.annotation.PostConstruct;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import server.types.data.NodeUsage;
 import server.types.data.ServerMisMatch;
 import dto.LoginDto;
 import dto.ManagerMapDto;
 import dto.ManagerModDto;
+import server.EnvConfig;
 import server.manager.NodeManager;
 import server.service.GatewayService.GatewayClient;
 import server.utils.ApiError;
 import server.utils.Utils;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.FluxSink;
-import reactor.core.publisher.Mono;
-import reactor.core.publisher.Sinks;
-import reactor.core.scheduler.Scheduler;
-import reactor.core.scheduler.Schedulers;
-import reactor.util.retry.Retry;
 
 @Slf4j
-@Service
-@RequiredArgsConstructor
 public class ServerService {
     private final GatewayService gatewayService;
     private final NodeManager nodeManager;
     private final EventBus eventBus;
     private final ApiService apiService;
-    private final Scheduler scheduler = Schedulers.newSingle("server-service");
+    private final WsHandler wsHandler;
+    private final EnvConfig envConfig;
 
+    private final ScheduledExecutorService scheduler = Executors.newSingleThreadScheduledExecutor();
     private final ConcurrentHashMap<UUID, EnumSet<ServerFlag>> serverFlags = new ConcurrentHashMap<>();
-    private final LinkedList<FluxSink<BaseEvent>> eventSinks = new LinkedList<>();
+    private final List<Consumer<BaseEvent>> eventListeners = new LinkedList<>();
     private final ConcurrentHashMap<UUID, Consumer<LogEvent>> hostListeners = new ConcurrentHashMap<>();
-    private final ConcurrentHashMap<UUID, Flux<LogEvent>> hostFlux = new ConcurrentHashMap<>();
-
-    private static enum ServerFlag {
-        KILL,
-        NOT_RESPONSE,
-        RESTART
-    }
-
     private final ArrayList<BaseEvent> buffer = new ArrayList<>();
 
-    // private static final int MAX_RUNNING_SERVERS = 10;
+    private enum ServerFlag {
+        KILL, NOT_RESPONSE, RESTART
+    }
 
-    @PostConstruct
-    private void registerEventHandler() {
+    public ServerService(GatewayService gatewayService, NodeManager nodeManager, EventBus eventBus,
+            ApiService apiService, WsHandler wsHandler, EnvConfig envConfig) {
+        this.gatewayService = gatewayService;
+        this.nodeManager = nodeManager;
+        this.eventBus = eventBus;
+        this.apiService = apiService;
+        this.wsHandler = wsHandler;
+        this.envConfig = envConfig;
+
+        init();
+    }
+
+    private void init() {
         eventBus.on(event -> {
-            if (eventSinks.size() == 0) {
-                buffer.add(event);
-
-                if (buffer.size() > 1000) {
-                    buffer.remove(0);
+            synchronized (buffer) {
+                if (eventListeners.isEmpty()) {
+                    buffer.add(event);
+                    if (buffer.size() > 1000)
+                        buffer.remove(0);
+                } else {
+                    eventListeners.forEach(listener -> listener.accept(event));
                 }
-
-            } else {
-                eventSinks.forEach(sink -> {
-                    if (sink != null && !sink.isCancelled())
-                        sink.next(event);
-                });
             }
 
             if (event instanceof LogEvent logEvent) {
                 var listener = hostListeners.get(event.getServerId());
-
-                if (listener != null) {
+                if (listener != null)
                     listener.accept(logEvent);
-                }
             }
         });
+
+        scheduler.scheduleAtFixedRate(this::autoConnectAndHostCron, 30, 30, TimeUnit.SECONDS);
+        scheduler.scheduleAtFixedRate(this::autoTurnOffCron, 5, 5, TimeUnit.MINUTES);
     }
 
-    public Flux<BaseEvent> getEvents() {
-        Flux<BaseEvent> eventSink = Flux.create(emitter -> {
-            emitter.onDispose(() -> {
-                eventSinks.remove(emitter);
-                Log.info("Client disconnected: " + eventSinks.size());
-            });
-
+    public void addEventListener(Consumer<BaseEvent> listener) {
+        synchronized (buffer) {
             ArrayList<BaseEvent> copy = new ArrayList<>(buffer);
-
             buffer.clear();
-
-            for (BaseEvent event : copy) {
-                emitter.next(event);
-            }
-
-            if (!emitter.isCancelled()) {
-                eventSinks.add(emitter);
-
-                Log.info("Client connected: " + eventSinks.size());
-            }
-        });
-
-        return eventSink;
+            copy.forEach(listener::accept);
+            eventListeners.add(listener);
+        }
     }
 
-    public Mono<Void> remove(UUID serverId, NodeRemoveReason reason) {
-        eventBus.emit(new ServerEvents.StopEvent(serverId, reason));
+    public void removeEventListener(Consumer<BaseEvent> listener) {
+        synchronized (buffer) {
+            eventListeners.remove(listener);
+        }
+    }
 
+    public CompletableFuture<Void> remove(UUID serverId, NodeRemoveReason reason) {
+        eventBus.emit(new ServerEvents.StopEvent(serverId, reason));
         return nodeManager.remove(serverId, reason);
     }
 
-    public Mono<Boolean> pause(UUID serverId) {
-        return gatewayService.of(serverId)//
-                .flatMap(client -> client.server().pause());
+    public CompletableFuture<Boolean> pause(UUID serverId) {
+        return gatewayService.of(serverId).server().pause();
     }
 
-    public Flux<LogEvent> host(ServerConfig request) {
+    public void host(ServerConfig request) {
         UUID serverId = request.getId();
 
-        if (hostFlux.containsKey(serverId)) {
-            return hostFlux.get(serverId);
-        }
+        try {
+            Log.info("Delete old loader.jar");
+            nodeManager.deleteFile(serverId, "mindustry-tool-plugins");
+            nodeManager.deleteFile(serverId, "mods/loader.jar");
 
-        Mono<Sinks.Many<LogEvent>> supplier = Mono.fromSupplier(() -> Sinks.many()
-                .multicast()
-                .onBackpressureBuffer());
+            Fi websocketFile = nodeManager.getFile(serverId, "WEBSOCKET.txt");
+            if (!websocketFile.exists()) {
+                Log.info("Generate websocket file");
+                String jwt = wsHandler.generateServerJwt(serverId, envConfig.serverConfig().securityKey());
+                nodeManager.writeFile(serverId, "WEBSOCKET.txt", jwt.getBytes());
+            }
 
-        var flux = Flux.usingWhen(supplier,
-                sink -> {
-                    hostListeners.put(serverId, event -> sink.emitNext(event, Sinks.EmitFailureHandler.FAIL_FAST));
+            Log.info("Server not hosting, create server");
+            nodeManager.create(request);
 
-                    Flux<LogEvent> internalFlow = Flux.concat(
-                            Mono.just(LogEvent.info(serverId, "Server not hosting, create server")),
-                            nodeManager.create(request),
-                            Mono.just(LogEvent.info(serverId, "Delete old loader.jar")),
-                            nodeManager.deleteFile(serverId, "mindustry-tool-plugins")
-                                    .then(nodeManager.deleteFile(serverId, "mods/loader.jar"))
-                                    .then(Mono.just(LogEvent.info(serverId, "Cleanup finished")))
-                                    .onErrorResume(err -> Mono.just(LogEvent.info(serverId, err.getMessage()))),
-                            Mono.just(LogEvent.info(serverId, "Connecting to gateway...")),
-                            gatewayService.of(serverId)
-                                    .flatMapMany(gatewayClient -> hostCallGateway(request, gatewayClient)));
+            Log.info("Connecting to gateway...");
+            GatewayClient gatewayClient = gatewayService.of(serverId);
+            var serverGateway = gatewayClient.server();
 
-                    Flux<LogEvent> external = sink.asFlux()
-                            .takeUntilOther(internalFlow.ignoreElements());
+            Log.info("Waiting for server to start");
 
-                    return Flux.merge(external, internalFlow);
-                },
-                sink -> cleanup(serverId, sink),
-                (sink, err) -> cleanup(serverId, sink),
-                sink -> cleanup(serverId, sink)//
-        )
-                .doOnError(Log::err)
-                .onErrorResume(err -> Mono.just(LogEvent.error(serverId, err.getMessage())));
-
-        hostFlux.put(serverId, flux);
-
-        return flux.doFinally(signal -> hostFlux.remove(serverId));
-    }
-
-    private Mono<Void> cleanup(UUID serverId, Sinks.Many<LogEvent> sink) {
-        return Mono.fromRunnable(() -> {
-            hostListeners.remove(serverId);
-            sink.emitComplete(Sinks.EmitFailureHandler.FAIL_FAST);
-        });
-    }
-
-    private Flux<LogEvent> hostCallGateway(ServerConfig request, GatewayClient gatewayClient) {
-        var serverId = request.getId();
-        var serverGateway = gatewayClient.server();
-
-        Flux<LogEvent> waitingOkFlux = Flux.concat(//
-                Mono.just(LogEvent.info(serverId, "Waiting for server to start")), //
-                serverGateway//
-                        .isHosting()
-                        .retryWhen(Retry.fixedDelay(1200, Duration.ofMillis(100)))
-                        .thenReturn(LogEvent.info(serverId, "Server started, waiting for hosting")));
-
-        Flux<LogEvent> hostFlux = serverGateway.isHosting()
-                .flatMapMany(isHosting -> {
+            boolean isHosting = false;
+            for (int i = 0; i < 1200; i++) {
+                try {
+                    isHosting = serverGateway.isHosting().get(100, TimeUnit.MILLISECONDS);
                     if (isHosting) {
-                        var event = LogEvent.info(serverId, "Server is hosting, do nothing");
-                        Log.info("Server is hosting, do nothing");
-                        return Flux.just(event);
+                        break;
                     }
+                } catch (Exception ignored) {
+                }
+            }
 
-                    String gamemode = request.getGamemode();
+            if (isHosting) {
+                Log.info("Server is hosting, do nothing");
+                return;
+            }
 
-                    if (gamemode == null || gamemode.isEmpty()) {
-                        gamemode = request.getMode();
+            String gamemode = request.getGamemode();
+            if (gamemode == null || gamemode.isEmpty()) {
+                gamemode = request.getMode();
+            }
+
+            String[] preHostCommand = {
+                    "config name %s".formatted(request.getName()),
+                    request.getDescription().isEmpty() ? "" : "config desc %s".formatted(request.getDescription()),
+                    "config port 6567",
+                    "gamemode " + gamemode,
+                    "version"
+            };
+
+            try {
+                serverGateway.sendCommand(preHostCommand).get(5, TimeUnit.SECONDS);
+                Log.info("Config done");
+
+                Log.info("Host server");
+                serverGateway.host(request).get(15, TimeUnit.SECONDS);
+
+                Log.info("Wait for server status");
+                for (int i = 0; i < 600; i++) {
+                    if (serverGateway.isHosting().get(100, TimeUnit.MILLISECONDS)) {
+                        Log.info("Server hosting");
+                        return;
                     }
+                }
+                throw new ApiError(502, "Can not host server");
+            } catch (Exception e) {
+                throw new RuntimeException(e);
+            }
 
-                    String[] preHostCommand = { //
-                            "config name %s".formatted(request.getName()), //
-                            request.getDescription().length() == 0 ? ""
-                                    : "config desc %s".formatted(request.getDescription()), //
-                            "config port 6567", //
-                            "gamemode " + gamemode,
-                            "version"
-                    };
-
-                    Flux<LogEvent> sendCommandFlux = Flux.concat(
-                            serverGateway//
-                                    .sendCommand(preHostCommand)
-                                    .thenReturn(LogEvent.info(serverId, "Config done")));
-
-                    Flux<LogEvent> sendHostFlux = Flux.concat(
-                            Mono.just(LogEvent.info(serverId, "Host server")),
-                            serverGateway.host(request).then(Mono.empty()));
-
-                    Flux<LogEvent> waitForStatusFlux = Flux.concat(
-                            Mono.just(LogEvent.info(serverId, "Wait for server status")),
-                            serverGateway.isHosting()//
-                                    .flatMap(b -> b //
-                                            ? Mono.empty()
-                                            : ApiError.badRequest("Server is not hosting yet"))//
-                                    .retryWhen(Retry.fixedDelay(600, Duration.ofMillis(100)))
-                                    .onErrorMap(IllegalStateException.class,
-                                            error -> new ApiError(HttpStatus.BAD_GATEWAY, "Can not host server"))
-                                    .thenReturn(LogEvent.info(serverId, "Server hosting")));
-
-                    return Flux.concat(sendCommandFlux, sendHostFlux, waitForStatusFlux);
-                });
-
-        return Flux.concat(waitingOkFlux, hostFlux);
+        } catch (Exception e) {
+            Log.err(e);
+        } finally {
+            hostListeners.remove(serverId);
+        }
     }
 
-    public Flux<ServerMisMatch> getMismatch(UUID serverId, ServerConfig config) {
-        return Mono.zipDelayError(//
-                state(serverId), //
-                getMods(serverId).filter(mod -> !mod.getName().equals("PluginLoader")).collectList()//
-        ).flatMapMany(zip -> {
-            var state = zip.getT1();
-            var mods = zip.getT2();
-
-            return nodeManager.getMismatch(serverId, config, state, mods);
-        });
+    public List<ServerMisMatch> getMismatch(UUID serverId, ServerConfig config) {
+        var state = state(serverId);
+        var mods = getMods(serverId).stream().filter(mod -> !mod.getName().equals("PluginLoader")).toList();
+        return nodeManager.getMismatch(serverId, config, state, mods);
     }
 
-    public Flux<ManagerMapDto> getManagerMaps() {
+    public List<ManagerMapDto> getManagerMaps() {
         return nodeManager.getManagerMaps();
     }
 
-    public Flux<ManagerModDto> getManagerMods() {
+    public List<ManagerModDto> getManagerMods() {
         return nodeManager.getManagerMods();
     }
 
-    public Flux<MapDto> getMaps(UUID serverId) {
+    public List<MapDto> getMaps(UUID serverId) {
         return nodeManager.getMaps(serverId);
     }
 
-    public Flux<ModDto> getMods(UUID serverId) {
+    public List<ModDto> getMods(UUID serverId) {
         return nodeManager.getMods(serverId);
     }
 
-    public Mono<ResponseEntity<Object>> getFiles(UUID serverId, String path) {
+    public Object getFiles(UUID serverId, String path) {
         return nodeManager.getFiles(serverId, path);
     }
 
-    public Mono<Boolean> isFileExists(UUID serverId, String path) {
-        return nodeManager.getFile(serverId, path).map(Fi::exists);
+    public boolean isFileExists(UUID serverId, String path) {
+        return nodeManager.getFile(serverId, path).exists();
     }
 
-    public Mono<Void> writeFile(UUID serverId, String path, FilePart filePart) {
-        if (filePart == null) {
-            return nodeManager.writeFile(serverId, path, new byte[0]);
+    public void writeFile(UUID serverId, String path, byte[] bytes, String filename) {
+        nodeManager.writeFile(serverId, path, bytes);
+        if (filename != null && filename.endsWith("msav")) {
+            CompletableFuture.runAsync(() -> {
+                try {
+                    byte[] image = apiService.getMapPreview(bytes).join();
+                    byte[] preview = Utils.toByteArray(Utils.toPreviewImage(Utils.fromBytes(image)));
+                    nodeManager.writeFile(serverId, path + ".png", preview);
+                } catch (Exception e) {
+                    Log.err(e);
+                }
+            });
         }
-
-        return Utils.readAllBytes(filePart)
-                .flatMap(bytes -> nodeManager.writeFile(serverId, path, bytes)
-                        .then(Mono.fromRunnable(() -> {
-                            String filename = filePart.filename();
-
-                            if (filename.endsWith("msav")) {
-                                apiService.getMapPreview(bytes)
-                                        .map(image -> Utils.toByteArray(Utils.toPreviewImage(Utils.fromBytes(image))))
-                                        .flatMap(image -> nodeManager.writeFile(serverId, path + ".png", image))
-                                        .subscribeOn(Schedulers.boundedElastic())
-                                        .doOnError(Log::err)
-                                        .onErrorComplete()
-                                        .subscribe();
-                            }
-                        })));
     }
 
-    public Mono<Boolean> createFolder(UUID serverId, String path) {
+    public boolean createFolder(UUID serverId, String path) {
         return nodeManager.createFolder(serverId, path);
     }
 
-    public Mono<Boolean> deleteFile(UUID serverId, String path) {
+    public boolean deleteFile(UUID serverId, String path) {
         return nodeManager.deleteFile(serverId, path);
     }
 
-    public Flux<NodeUsage> getUsage(UUID serverId) {
-        return nodeManager.getNodeUsage(serverId);
+    public void getUsage(UUID serverId, Consumer<NodeUsage> onUsage, Consumer<Throwable> onError) {
+        nodeManager.getNodeUsage(serverId, onUsage, onError);
     }
 
-    public Mono<ServerStateDto> state(UUID serverId) {
-        return gatewayService.of(serverId)//
-                .flatMap(client -> client.server().getState())//
-                .onErrorResume(error -> {
-                    Log.err(error.getMessage());
-                    return Mono.empty();
-                })
-                .defaultIfEmpty(new ServerStateDto().setServerId(serverId).setStatus(ServerStatus.PAUSED));
+    public ServerStateDto state(UUID serverId) {
+        try {
+            return gatewayService.of(serverId)
+                    .server()
+                    .getState()
+                    .get(2, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            Log.err(e.getMessage());
+            return new ServerStateDto().setServerId(serverId).setStatus(ServerStatus.PAUSED);
+        }
     }
 
-    public Mono<byte[]> getImage(UUID serverId) {
-        return gatewayService.of(serverId)//
-                .flatMap(client -> client.server().getImage());
+    public byte[] getImage(UUID serverId) {
+        try {
+            return gatewayService.of(serverId)
+                    .server()
+                    .getImage()
+                    .get(5, TimeUnit.SECONDS);
+        } catch (Exception e) {
+            throw new RuntimeException(e);
+        }
     }
 
-    public Flux<PlayerDto> getPlayers(UUID serverId) {
-        return gatewayService.of(serverId)
-                .flatMap(client -> client.server().getState())
-                .flatMapIterable(state -> state.getPlayers());
+    public List<PlayerDto> getPlayers(UUID serverId) {
+        return state(serverId).getPlayers();
     }
 
-    public Mono<Void> updatePlayer(UUID serverId, String uuid, LoginDto payload) {
-        return gatewayService.of(serverId).flatMap(client -> client.server().updatePlayer(uuid, payload));
+    public void updatePlayer(UUID serverId, String uuid, LoginDto payload) {
+        gatewayService.of(serverId)
+                .server()
+                .updatePlayer(uuid, payload)
+                .join();
     }
 
-    @PostConstruct
-    @Scheduled(fixedDelay = 30, timeUnit = TimeUnit.SECONDS)
     private void autoConnectAndHostCron() {
-        nodeManager.list()
-                .filter(state -> state.meta.isPresent())
-                .flatMap(state -> {
-                    if (state.running()) {
-                        return gatewayService.of(state.meta().get().getConfig().getId()).then();
-                    }
-
-                    var config = state.meta().get().getConfig();
-
-                    if (config.getIsAutoTurnOff() == false) {
-                        return host(config).then();
-                    }
-
-                    return Mono.empty();
-                })
-                .subscribeOn(Schedulers.boundedElastic())
-                .subscribe();
+        nodeManager.list().forEach(state -> {
+            if (state.meta().isEmpty())
+                return;
+            var config = state.meta().get().getConfig();
+            if (state.running()) {
+                gatewayService.of(config.getId());
+            } else if (!config.getIsAutoTurnOff()) {
+                host(config);
+            }
+        });
     }
 
-    @PostConstruct
-    @Scheduled(fixedDelay = 5, timeUnit = TimeUnit.MINUTES)
     private void autoTurnOffCron() {
-        // var runningWithAutoTurnOff = containers.stream()//
-        // .filter(container -> container.getState().equalsIgnoreCase("running"))//
-        // .filter(container ->
-        // readMetadataFromContainer(container).map(ServerMetadata::getInit).map(
-        // ServerConfig::isAutoTurnOff).orElse(false))//
-        // .collect(Collectors.toList())
-        // .size();
+        List<ServerConfig> servers = nodeManager.list().stream()
+                .filter(s -> s.meta().isPresent() && s.running())
+                .map(s -> s.meta().get().getConfig())
+                .toList();
 
-        // var shouldAutoTurnOff = runningWithAutoTurnOff > 2;
+        var serversId = servers.stream().map(ServerConfig::getId).toList();
+        serverFlags.entrySet().removeIf(entry -> entry.getValue().isEmpty() || !serversId.contains(entry.getKey()));
 
-        nodeManager.list()
-                .filter(state -> state.meta.isPresent() && state.running())
-                .map(state -> state.meta().orElseThrow().getConfig())
-                .collectList()
-                .flatMapMany(servers -> {
-                    // boolean shouldAutoTurnOff = servers.size() > MAX_RUNNING_SERVERS;
-                    var serversId = servers.stream().map(ServerConfig::getId).toList();
-
-                    serverFlags.entrySet()
-                            .removeIf(entry -> entry.getValue().isEmpty() || !serversId.contains(entry.getKey()));
-
-                    return Flux.fromIterable(servers)
-                            .flatMap(config -> checkRunningServer(config, true));
-                })
-                .doOnError(error -> Log.err(error.getMessage()))
-                .onErrorComplete(ApiError.class)
-                .timeout(Duration.ofSeconds(10))
-                .subscribeOn(scheduler)
-                .subscribe();
+        servers.forEach(config -> checkRunningServer(config, true));
     }
 
-    private Mono<Void> checkRunningServer(ServerConfig config, boolean shouldAutoTurnOff) {
+    private void checkRunningServer(ServerConfig config, boolean shouldAutoTurnOff) {
         var serverId = config.getId();
         var flag = serverFlags.computeIfAbsent(serverId, (_ignore) -> EnumSet.noneOf(ServerFlag.class));
 
-        return gatewayService.of(serverId)//
-                .flatMap(client -> client.server().getState())//
-                .onErrorResume(error -> {
-                    Log.err(error.getMessage());
-                    return Mono.empty();
-                })
-                .defaultIfEmpty(new ServerStateDto().setServerId(serverId).setStatus(ServerStatus.NOT_RESPONSE))
-                .flatMap(state -> {
-                    if (state.getStatus().equals(ServerStatus.NOT_RESPONSE)) {
-                        Log.err("Server [@] not response", serverId);
+        ServerStateDto state = state(serverId);
+        if (state.getStatus().equals(ServerStatus.NOT_RESPONSE)) {
+            Log.err("Server [@] not response", serverId);
+            if (flag.contains(ServerFlag.NOT_RESPONSE)) {
+                eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] Kill server for not response"));
+                remove(serverId, NodeRemoveReason.FETCH_EVENT_TIMEOUT);
+            } else {
+                eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] Server not response, flag to kill"));
+                flag.add(ServerFlag.NOT_RESPONSE);
+            }
+            return;
+        }
 
-                        if (flag.contains(ServerFlag.NOT_RESPONSE)) {
-                            eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] Kill server for not response"));
-                            return remove(serverId, NodeRemoveReason.FETCH_EVENT_TIMEOUT);
-                        } else {
-                            eventBus.emit(
-                                    LogEvent.info(serverId, "[red][Orchestrator] Server not response, flag to kill"));
-                            flag.add(ServerFlag.NOT_RESPONSE);
-                        }
+        flag.remove(ServerFlag.NOT_RESPONSE);
+        if (!config.getIsAutoTurnOff())
+            return;
 
-                        return Mono.empty();
-                    }
-
-                    if (flag.contains(ServerFlag.NOT_RESPONSE)) {
-                        flag.remove(ServerFlag.NOT_RESPONSE);
-                    }
-
-                    if (config.getIsAutoTurnOff() == false) {
-                        return Mono.empty();
-                    }
-
-                    boolean shouldKill = state.getPlayers().isEmpty();
-
-                    if (shouldKill && shouldAutoTurnOff) {
-                        if (flag.contains(ServerFlag.KILL)) {
-                            flag.remove(ServerFlag.KILL);
-
-                            eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] Auto shut down server"));
-
-                            return remove(serverId, NodeRemoveReason.NO_PLAYER);
-                        } else {
-                            flag.add(ServerFlag.KILL);
-
-                            eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] No players, flag to kill"));
-                        }
-                    } else {
-                        if (flag.contains(ServerFlag.KILL)) {
-                            flag.remove(ServerFlag.KILL);
-
-                            eventBus.emit(
-                                    LogEvent.info(serverId, "[green][Orchestrator] Remove kill flag from server"));
-
-                        }
-                    }
-
-                    return Mono.empty();
-                })//
-                .doOnError(error -> log.error(error.getMessage()))
-                .onErrorComplete();
+        boolean shouldKill = state.getPlayers().isEmpty();
+        if (shouldKill && shouldAutoTurnOff) {
+            if (flag.contains(ServerFlag.KILL)) {
+                flag.remove(ServerFlag.KILL);
+                eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] Auto shut down server"));
+                remove(serverId, NodeRemoveReason.NO_PLAYER);
+            } else {
+                flag.add(ServerFlag.KILL);
+                eventBus.emit(LogEvent.info(serverId, "[red][Orchestrator] No players, flag to kill"));
+            }
+        } else {
+            flag.remove(ServerFlag.KILL);
+        }
     }
 }
